# STM32FieldOrientedController

./: .gitignore  .mxproject  CMakeLists.txt  README.md  nucleo_f446re.ioc
Core/Src/: main.c
CubeMX/: Makefile
Project/Src/: application.cpp
application/Inc/: application.h
application/inc/: calculator.h
application/src/: application.c
board/CubeMX/: CubeMX.ioc
board/CubeMX/Core/Src/: main.c
docker/: Dockerfile  docker-compose.yml
test/src/: test_calculator.cpp
